--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
 # Database
-DATABASE_URL=postgresql://postgres.jzgmhmmzryrsdpsmmqar:Dynamite07@aws-0-ap-southeast-1.pooler.supabase.com:6543/postgres?pgbouncer=true
+# Session Pooler (IPv4 compatible - from Supabase dashboard)
+DATABASE_URL=postgresql://postgres.jzgmhmmzryrsdpsmmqar:Dynamite07@aws-1-ap-southeast-1.pooler.supabase.com:5432/postgres
 
 # JWT
 JWT_SECRET=Dynamite07
