--- a/.env
+++ b/.env
@@ -6,5 +6,17 @@ DATABASE_URL=postgresql://postgres.jzgmhmmzryrsdpsmmqar:Dynamite07@aws-1-ap-sout
 JWT_SECRET=Dynamite07
 JWT_EXPIRATION=168h
 
+# OPENAI
+OPENAI_API_KEY=sk-proj-your-openai-api-key-here
+OPENAI_EMBEDDING_MODEL=text-embedding-3-small
+OPENAI_CHAT_MODEL=gpt-4o-mini
+
+# PERFORMANCE CONFIG
+CHUNK_SIZE=1000
+CHUNK_OVERLAP=200
+TOP_K_RESULTS=6
+SIMILARITY_THRESHOLD=0.5
+
+
 # Server
 PORT=8080
